# hacker_news_crawler

./: pyproject.toml
homework/: hacker_news_crawler.py  main.py  readme.md
homework/models/: post.py
