[project]
name = "otus-python-developer-python-pro-2-0-36-asyncio-homework"
version = "0.1.0"
description = ""
authors = [
    {name = "Alina Zharkevich",email = "76485281+alinasafina22@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "scrapy (>=2.14.2,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "otus_python_developer_python_pro_2"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
